k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gamelink
  labels:
    app: gamelink
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gamelink
    spec:
      containers:
        - name: gamelink
#          image: 'registry.gitlab.smedialink.com/z/gamelink-go:latest'
          image: 'mrcarrot/gamelink-go:latest'
          ports:
            - containerPort: 3000
              name: http
