k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gamelink
  name: gamelink
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: gamelink
