k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1k
  labels:
    app: gamelink
  name: gamelink
spec:
  rules:
  - host: gamelink.dev.smedialink.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gamelink
          servicePort: http
